// clang-format off
/* Autogenerated by mlir-tblgen; don't manually edit. */

syntax = "proto3";

package protocir;
option java_package = "org.jacodb.impl.grpc";

import "setup.proto";
import "enum.proto";

message MLIRAttribute {
  oneof attribute {
    MLIRArrayAttr array_attr = 1;
    MLIRDictionaryAttr dictionary_attr = 2;
    MLIRFloatAttr float_attr = 3;
    MLIRIntegerAttr integer_attr = 4;
    MLIRStringAttr string_attr = 5;
    MLIRTypeAttr type_attr = 6;
    MLIRUnitAttr unit_attr = 7;
    MLIRNamedAttr named_attr = 8;
    MLIRFlatSymbolRefAttr flat_symbol_ref_attr = 9;
    MLIRDenseI32ArrayAttr dense_i32_array_attr = 10;

    MLIRLocation location = 11;

    CIRAddressSpaceAttr address_space_attr = 12;
    CIRAnnotationAttr annotation_attr = 13;
    CIRBitfieldInfoAttr bitfield_info_attr = 14;
    CIRBoolAttr bool_attr = 15;
    CIRTBAAAttr tbaa_attr = 16;
    CIRCatchAllAttr catch_all_attr = 17;
    CIRCatchUnwindAttr catch_unwind_attr = 18;
    CIRCmpThreeWayInfoAttr cmp_three_way_info_attr = 19;
    CIRComplexAttr complex_attr = 20;
    CIRConstArrayAttr const_array_attr = 21;
    CIRConstPtrAttr const_ptr_attr = 22;
    CIRConstStructAttr const_struct_attr = 23;
    CIRConstVectorAttr const_vector_attr = 24;
    CIRConvergentAttr convergent_attr = 25;
    CIRDataMemberAttr data_member_attr = 26;
    CIRDynamicCastInfoAttr dynamic_cast_info_attr = 27;
    CIRExtraFuncAttributesAttr extra_func_attributes_attr = 28;
    CIRFPAttr fp_attr = 29;
    CIRGlobalAnnotationValuesAttr global_annotation_values_attr = 30;
    CIRGlobalCtorAttr global_ctor_attr = 31;
    CIRGlobalDtorAttr global_dtor_attr = 32;
    CIRGlobalViewAttr global_view_attr = 33;
    CIRInactiveUnionFieldAttr inactive_union_field_attr = 34;
    CIRInlineAttr inline_attr = 35;
    CIRIntAttr int_attr = 36;
    CIRLangAttr lang_attr = 37;
    CIRMethodAttr method_attr = 38;
    CIRNoThrowAttr no_throw_attr = 39;
    CIROpenCLKernelArgMetadataAttr open_cl_kernel_arg_metadata_attr = 40;
    CIROpenCLKernelAttr open_cl_kernel_attr = 41;
    CIROpenCLKernelMetadataAttr open_cl_kernel_metadata_attr = 42;
    CIROpenCLKernelUniformWorkGroupSizeAttr open_cl_kernel_uniform_work_group_size_attr = 43;
    CIROpenCLVersionAttr open_cl_version_attr = 44;
    CIROptNoneAttr opt_none_attr = 45;
    CIRStructLayoutAttr struct_layout_attr = 46;
    CIRTypeInfoAttr type_info_attr = 47;
    CIRUndefAttr undef_attr = 48;
    CIRVTableAttr v_table_attr = 49;
    CIRVisibilityAttr visibility_attr = 50;
    CIRZeroAttr zero_attr = 51;
  }
}

message MLIRArrayAttr {
  repeated MLIRAttribute value = 1;
}

message MLIRDictionaryAttr {
  repeated MLIRNamedAttr value = 1;
}

message MLIRFloatAttr {
  optional MLIRTypeID type = 1;
  string value = 2;
}

message MLIRIntegerAttr {
  optional MLIRTypeID type = 1;
  string value = 2;
}

message MLIRStringAttr {
  string value = 1;
  optional MLIRTypeID type = 2;
}

message MLIRTypeAttr {
  MLIRTypeID value = 1;
}

message MLIRUnitAttr {
}

message MLIRNamedAttr {
  MLIRStringAttr name = 1;
  MLIRAttribute value = 2;
}

message MLIRFlatSymbolRefAttr {
  MLIRStringAttr root_reference = 1;
}

message MLIRDenseI32ArrayAttr {
  int64 size = 1;
  repeated int32 raw_data = 2;
}

message MLIRLocation {
  oneof location {
    MLIRCallSiteLoc call_site_loc = 1;
    MLIRFileLineColLoc file_line_col_loc = 2;
    MLIRFusedLoc fused_loc = 3;
    MLIRNameLoc name_loc = 4;
    MLIROpaqueLoc opaque_loc = 5;
    MLIRUnknownLoc unknown_loc = 6;
  }
}

message MLIRCallSiteLoc {
  MLIRLocation callee = 1;
  MLIRLocation caller = 2;
}

message MLIRFileLineColLoc {
  MLIRStringAttr filename = 1;
  uint64 line = 2;
  uint64 column = 3;
}

message MLIRFusedLoc {
  repeated MLIRLocation locations = 1;
  optional MLIRAttribute metadata = 2;
}

message MLIRNameLoc {
  MLIRStringAttr name = 1;
  MLIRLocation child_loc = 2;
}

message MLIROpaqueLoc {
  MLIRLocation fallback_location = 1;
}

message MLIRUnknownLoc {
}

message CIRAddressSpaceAttr {
  int32 value = 1;
}

message CIRAnnotationAttr {
  MLIRStringAttr name = 1;
  MLIRArrayAttr args = 2;
}

message CIRBitfieldInfoAttr {
  MLIRStringAttr name = 1;
  MLIRTypeID storage_type = 2;
  uint64 size = 3;
  uint64 offset = 4;
  bool is_signed = 5;
}

message CIRBoolAttr {
  MLIRTypeID type = 1;
  bool value = 2;
}

message CIRTBAAAttr {
}

message CIRCatchAllAttr {
}

message CIRCatchUnwindAttr {
}

message CIRCmpThreeWayInfoAttr {
  CIRCmpOrdering ordering = 1;
  int64 lt = 2;
  int64 eq = 3;
  int64 gt = 4;
  optional int64 unordered = 5;
}

message CIRComplexAttr {
  MLIRTypeID type = 1;
  MLIRAttribute real = 2;
  MLIRAttribute imag = 3;
}

message CIRConstArrayAttr {
  optional MLIRTypeID type = 1;
  MLIRAttribute elts = 2;
  int64 trailing_zeros_num = 3;
}

message CIRConstPtrAttr {
  MLIRTypeID type = 1;
  MLIRIntegerAttr value = 2;
}

message CIRConstStructAttr {
  optional MLIRTypeID type = 1;
  MLIRArrayAttr members = 2;
}

message CIRConstVectorAttr {
  optional MLIRTypeID type = 1;
  MLIRArrayAttr elts = 2;
}

message CIRConvergentAttr {
}

message CIRDataMemberAttr {
  MLIRTypeID type = 1;
  optional uint64 member_index = 2;
}

message CIRDynamicCastInfoAttr {
  CIRGlobalViewAttr src_rtti = 1;
  CIRGlobalViewAttr dest_rtti = 2;
  MLIRFlatSymbolRefAttr runtime_func = 3;
  MLIRFlatSymbolRefAttr bad_cast_func = 4;
  CIRIntAttr offset_hint = 5;
}

message CIRExtraFuncAttributesAttr {
  MLIRDictionaryAttr elements = 1;
}

message CIRFPAttr {
  MLIRTypeID type = 1;
  string value = 2;
}

message CIRGlobalAnnotationValuesAttr {
  MLIRArrayAttr annotations = 1;
}

message CIRGlobalCtorAttr {
  MLIRStringAttr name = 1;
  int64 priority = 2;
}

message CIRGlobalDtorAttr {
  MLIRStringAttr name = 1;
  int64 priority = 2;
}

message CIRGlobalViewAttr {
  optional MLIRTypeID type = 1;
  MLIRFlatSymbolRefAttr symbol = 2;
  optional MLIRArrayAttr indices = 3;
}

message CIRInactiveUnionFieldAttr {
  optional MLIRTypeID type = 1;
}

message CIRInlineAttr {
  CIRInlineKind value = 1;
}

message CIRIntAttr {
  optional MLIRTypeID type = 1;
  string value = 2;
}

message CIRLangAttr {
  CIRSourceLanguage lang = 1;
}

message CIRMethodAttr {
  MLIRTypeID type = 1;
  optional MLIRFlatSymbolRefAttr symbol = 2;
  optional uint64 vtable_offset = 3;
}

message CIRNoThrowAttr {
}

message CIROpenCLKernelArgMetadataAttr {
  MLIRArrayAttr addr_space = 1;
  MLIRArrayAttr access_qual = 2;
  MLIRArrayAttr type = 3;
  MLIRArrayAttr base_type = 4;
  MLIRArrayAttr type_qual = 5;
  optional MLIRArrayAttr name = 6;
}

message CIROpenCLKernelAttr {
}

message CIROpenCLKernelMetadataAttr {
  optional MLIRArrayAttr work_group_size_hint = 1;
  optional MLIRArrayAttr reqd_work_group_size = 2;
  optional MLIRTypeAttr vec_type_hint = 3;
  optional bool vec_type_hint_signedness = 4;
  optional MLIRIntegerAttr intel_reqd_sub_group_size = 5;
}

message CIROpenCLKernelUniformWorkGroupSizeAttr {
}

message CIROpenCLVersionAttr {
  int32 major_version = 1;
  int32 minor_version = 2;
}

message CIROptNoneAttr {
}

message CIRStructLayoutAttr {
  uint64 size = 1;
  uint64 alignment = 2;
  bool padded = 3;
  MLIRTypeID largest_member = 4;
  MLIRArrayAttr offsets = 5;
}

message CIRTypeInfoAttr {
  optional MLIRTypeID type = 1;
  MLIRArrayAttr data = 2;
}

message CIRUndefAttr {
  optional MLIRTypeID type = 1;
}

message CIRVTableAttr {
  optional MLIRTypeID type = 1;
  MLIRArrayAttr vtable_data = 2;
}

message CIRVisibilityAttr {
  CIRVisibilityKind value = 1;
}

message CIRZeroAttr {
  optional MLIRTypeID type = 1;
}
// clang-format on
